syntax = "proto3";

package bilgi;

option java_package = "comm.proto.bilgi";
option java_outer_classname = "CapacityProto";

message Capacity {
  int32 serverX_status = 1;
  int64 timestamp = 2;
  int32 server_id = 3;  // SayÄ±sal server_id
}
